[gd_scene load_steps=16 format=2]

[ext_resource path="res://images/portraitbg.png" type="Texture" id=1]
[ext_resource path="res://assets/Dialog_System.gd" type="Script" id=2]
[ext_resource path="res://fonts/m5x7.tres" type="DynamicFont" id=3]
[ext_resource path="res://images/frame.png" type="Texture" id=5]
[ext_resource path="res://fonts/m5x7-bold.tres" type="DynamicFont" id=6]

[sub_resource type="Animation" id=1]
resource_name = "AAA"
length = 17.0
step = 1.0

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ContinueIndicator:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "EEE"
length = 17.0
step = 1.0

[sub_resource type="Animation" id=4]
resource_name = "OOO"
length = 17.0
step = 1.0

[sub_resource type="Animation" id=5]
length = 17.0
step = 1.0

[sub_resource type="Animation" id=6]
resource_name = "UUU"
length = 17.0
step = 1.0

[sub_resource type="Animation" id=7]
resource_name = "d"
length = 5.0
step = 1.0

[sub_resource type="Animation" id=8]
resource_name = "e"
length = 5.0
step = 1.0

[sub_resource type="Animation" id=9]
resource_name = "f"
length = 5.0
step = 1.0

[sub_resource type="Animation" id=10]
resource_name = "g"
length = 5.0
step = 1.0

[node name="Dialog" type="Control"]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 0.317
margin_right = -1.0
margin_bottom = 0.0579987
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgcolor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.0627451, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AAA = SubResource( 1 )
anims/Continue_Indicator = SubResource( 2 )
anims/EEE = SubResource( 3 )
anims/OOO = SubResource( 4 )
anims/Talking_Sounds = SubResource( 5 )
anims/UUU = SubResource( 6 )
anims/d = SubResource( 7 )
anims/e = SubResource( 8 )
anims/f = SubResource( 9 )
anims/g = SubResource( 10 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="SpriteTimer" type="Timer" parent="."]

[node name="Frame" type="ColorRect" parent="."]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 0.0579987
color = Color( 0.133333, 0.109804, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="advance" type="TextureButton" parent="Frame"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 42.0
margin_bottom = -0.0579987
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Frame/advance"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 71.187, 16 )
mouse_filter = 1
custom_fonts/bold_font = ExtResource( 6 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[url=a]words[/url]
[url=\"ok\"]words[/url]
[url=\"ok\"]words[/url]
[url=\"ok\"]words[/url]"
meta_underlined = false
text = "words
words
words
words"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choices" type="VBoxContainer" parent="Frame"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 42.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ContinueIndicator" type="ColorRect" parent="."]
visible = false
margin_right = 4.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="soundtimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="bg" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpriteLeft" type="Sprite" parent="."]
position = Vector2( 4, 4 )
centered = false

[node name="border" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line cheater" type="ColorRect" parent="."]
margin_left = 40.0
margin_right = 41.0
margin_bottom = 40.0
color = Color( 0.0784314, 0.0627451, 0.0745098, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="debug" type="RichTextLabel" parent="."]
margin_left = 65.0
margin_top = 52.0
margin_right = 105.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Frame/advance" to="." method="_on_advance_pressed"]
[connection signal="meta_clicked" from="Frame/advance/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="timeout" from="soundtimer" to="." method="_on_soundtimer_timeout"]
